Fix header line break on Firefox

--- a/static/sass/components/_PageHeader.scss
+++ b/static/sass/components/_PageHeader.scss
@@ -25,6 +25,8 @@
 
 .PageHeader-link {
   @extend %header-link;
+
+  float: left;
 }
 
 .PageHeader-menu-link {
